--- a/HRStore/views/forum.xml
+++ b/HRStore/views/forum.xml
@@ -29,7 +29,7 @@
                                                        t-att-value="request.csrf_token()"/>
                                                 <input type="hidden" name="user_id"
                                                        t-att-value="user_id"/>
-                                                <button class="btn btn-link nav-link"  style="color:black;"
+                                                <button class="btn btn-link nav-link" style="color:black;"
                                                         type="submit">首页
                                                 </button>
                                             </form>
@@ -205,7 +205,7 @@
                                            t-att-value="1"/>
                                     <button type="submit" class="btn btn-md btn-primary">公告</button>
                                 </form>
-                                 <form action="/get_forum" method="post">
+                                <form action="/get_forum" method="post">
                                     <input type="hidden" name="csrf_token"
                                            t-att-value="request.csrf_token()"/>
                                     <input type="hidden" name="user_id"
@@ -214,7 +214,7 @@
                                            t-att-value="2"/>
                                     <button type="submit" class="btn btn-md btn-primary">人员招聘</button>
                                 </form>
-                                 <form action="/get_forum" method="post">
+                                <form action="/get_forum" method="post">
                                     <input type="hidden" name="csrf_token"
                                            t-att-value="request.csrf_token()"/>
                                     <input type="hidden" name="user_id"
@@ -223,7 +223,7 @@
                                            t-att-value="3"/>
                                     <button type="submit" class="btn btn-md btn-primary">求职</button>
                                 </form>
-                                 <form action="/get_forum" method="post">
+                                <form action="/get_forum" method="post">
                                     <input type="hidden" name="csrf_token"
                                            t-att-value="request.csrf_token()"/>
                                     <input type="hidden" name="user_id"
@@ -232,7 +232,7 @@
                                            t-att-value="4"/>
                                     <button type="submit" class="btn btn-md btn-primary">我要提问</button>
                                 </form>
-                                 <form action="/get_forum" method="post">
+                                <form action="/get_forum" method="post">
                                     <input type="hidden" name="csrf_token"
                                            t-att-value="request.csrf_token()"/>
                                     <input type="hidden" name="user_id"
@@ -268,21 +268,26 @@
                         </div>
 
                         <div class="col-md-3 offset-md-1 col-lg-3 offset-lg-0">
-                            <div class="sidebar">
-                                <!-- Category Widget -->
-                                <div class="widget category">
-                                    <!-- Widget Header -->
-                                    <h5 class="widget-header">商家信息</h5>
-                                    <div class="profile-thumb">
-                                        <img src="" alt="" class="rounded-circle"/>
-                                        <!--<span t-field="commonuser_info.user_image"
-                                              t-options="{'widget': 'image', 'class': 'mx-auto d-block img-thumbnail'}"/>
-                                    -->
-                                    </div>
-                                    <p>联系方式：</p>
-                                </div>
+                            <t t-if="ad_list">
+                                <t t-foreach="ad_list" t-as="ad">
+                                    <div class="sidebar">
+                                        <!-- Category Widget -->
+                                        <div class="widget category">
+                                            <!-- Widget Header -->
+                                            <h5 class="widget-header">
+                                                <a t-att-href="ad.text"> <t t-esc="ad.title"></t></a>
+                                            </h5>
+                                            <div class="profile-thumb">
 
-                            </div>
+                                                <span t-field="ad.image"
+                                                      t-options="{'widget': 'image', 'class': 'mx-auto d-block img-thumbnail'}"/>
+
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </t>
+                            </t>
                             <div class="sidebar">
                                 <!-- Category Widget -->
                                 <div class="widget category">
